# dywapitchtrack

./: .gitignore
pitch_monitor/: CMakeLists.txt
pitch_monitor/executable/: main.c
pitch_monitor/include/: libpitcher_exports.h  portaudio_helper.h
pitch_monitor/portaudio-lib/inlcude/: pa_win_waveformat.h
pitch_monitor/portaudio-lib/lib/: portaudio_static_x64.lib  portaudio_x64.exp  portaudio_x64.lib
pitch_monitor/src/: dywapitchtrack.c  portaudio_helper.c
